...
                                      )
                                    ])),
                                const SizedBox(height: 15),
                                SizedBox(
                                    width: 350,
                                    child: TextField(
                                      key: const Key('description'),
                                      controller: descriptionController,
                                      textCapitalization:
                                          TextCapitalization.words,
                                      //autofocus: true,
                                      decoration: InputDecoration(
                                        hintText:
...
                                            () => MainUS(email: widget.email));
                                      },
                                      style: const ButtonStyle(
                                        backgroundColor: WidgetStatePropertyAll(
                                            Colors.deepPurple),
                                      ),
                                      child: const Text('Submit',
                                          style: TextStyle(
                                              color: Colors.white,
                                              fontSize: 20))),
                                )
                              ],
                            ),
...
            width: 1,
          ),
        ),
        child: Padding(
          padding: const EdgeInsetsDirectional.fromSTEB(10, 0, 0, 0),
          child: DropdownButton<String>(
            key: const Key('clientSelector'),
            value: value,
            items: items.map<DropdownMenuItem<String>>((String value) {
              return DropdownMenuItem<String>(
                value: value,
                child: Text(value),
              );
...
